# techquest-estimator

./: .daemon_status.json  .gitattributes  .gitignore  Export-Codebase.ps1  LICENSE  MASTER_DB_SAMPLE.json  README.md  daemon.js  database.sqlite-shm  database.sqlite-wal  index.html  package-lock.json  package.json  server.js  start-server.bat  start-server.command  start-server.sh  test_api.cjs  tui.js  vite.config.js
core/: Cargo.toml
core/crates/: .daemon_status.json  database.sqlite-shm  database.sqlite-wal
core/crates/console/: Cargo.toml
core/crates/console/src/: main.rs
core/crates/daemon/: Cargo.toml
core/crates/daemon/src/: api.rs  main.rs
core/crates/daemon/src/routes/: auth.rs  boqs.rs  crm.rs  messages.rs  mod.rs  os.rs  projects.rs  resources.rs  settings.rs  staff.rs
core/crates/shared/: Cargo.toml
core/crates/shared/src/: lib.rs
electron/: db.js  main.js  preload.cjs  preload.js  traySync.js  webServer.js
electron/ipc/: masterData.js  projects.js  settings.js  syncAndBackup.js
public/: icon.icns
scripts/: deploy.js
src/: App.css  App.jsx  apiWrapper.js  db.js  index.css  main.jsx  webBridge.js
src/components/: About.jsx  CompanySettings.jsx  CompanySettingsDialog.jsx  CrmDashboard.jsx  DailyLogs.jsx  DatabaseEditor.jsx  Directory.jsx  ErrorBoundary.jsx  Home.jsx  Login.jsx  ProjectArchive.jsx  ProjectDetailsTab.jsx  ProjectWorkspace.jsx  RateImporter.jsx  ServerManager.jsx  StaffWorkLog.jsx
src/context/: AuthContext.jsx  SettingsContext.jsx
src/engines/: calculationEngine.js  measurementEngine.js
src/styles/: components.js
(+28 files in other folders)
