[package]
name = "console"
version = "0.1.0"
edition = "2024"

[dependencies]
# The UI Framework
ratatui = "0.30.0"
# The Terminal Backend (handles raw mode and keyboard events)
crossterm = "0.29.0"
# File handling and JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Our shared models
shared = { path = "../shared" }