[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
# The web framework (Replacing Express)
axum = "0.8"
# The async runtime (Rust doesn't have an event loop built-in like Node, so we use Tokio)
tokio = { version = "1.0", features = ["full"] }
# The database driver (Replacing better-sqlite3)
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
# JSON conversion and file handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Our shared database models!
shared = { path = "../shared" }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.10", features = ["v4"] }
base64 = "0.22.1"
