[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serde allows us to easily convert Rust Structs into JSON
serde = { version = "1.0", features = ["derive"] }
# We only need the core sqlx features here to derive FromRow
sqlx = { version = "0.8", default-features = false, features = ["derive"] }